Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50160

QWebEngineView crashes as soon as an URL schemeHandler is installed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6.0 RC
    • 5.6.0 Beta
    • WebEngine
    • None
    • Debian Unstable

      My Code is basically as follows (need to see if I can generate a minimal example):

          contentWidget->load(QUrl("http://google.at"));
          auto schemeHandler = new QtHelpSchemeHandler(helpEngine, contentWidget->page());
          contentWidget->page()->profile()->installUrlSchemeHandler(QByteArray("qthelp:"), schemeHandler);
      

      At some point (I cannot trace exactly from what) it fails with:

      "ASSERT: "delegate->hasCookieMonster()" in file qwebenginecookiestore.cpp, line 61"
      
      
      1	__GI_raise	raise.c	55	0x7fffead47657	
      2	__GI_abort	abort.c	89	0x7fffead48a2a	
      3	qt_message_fatal	qlogging.cpp	1610	0x7fffebee51c3	
      4	QMessageLogger::fatal	qlogging.cpp	784	0x7fffebee188e	
      5	qt_assert	qglobal.cpp	3044	0x7fffebedaa6e	
      6	QWebEngineCookieStorePrivate::processPendingUserCookies	qwebenginecookiestore.cpp	61	0x7ffff3dfc089	
      7	QtWebEngineCore::CookieMonsterDelegateQt::setCookieMonster	cookie_monster_delegate_qt.cpp	145	0x7fffee8b8aa1	
      8	QtWebEngineCore::URLRequestContextGetterQt::generateCookieStore	url_request_context_getter_qt.cpp	215	0x7fffee906957	
      9	QtWebEngineCore::URLRequestContextGetterQt::generateStorage	url_request_context_getter_qt.cpp	163	0x7fffee9063a0	
      10	base::internal::RunnableAdapter<void (QtWebEngineCore::URLRequestContextGetterQt:: *)()>::Run	bind_internal.h	176	0x7fffee90b15f	
      11	base::internal::InvokeHelper<false, void, base::internal::RunnableAdapter<void (QtWebEngineCore::URLRequestContextGetterQt:: *)()>, base::internal::TypeList<QtWebEngineCore::URLRequestContextGetterQt * const&>>::MakeItSo	bind_internal.h	293	0x7fffee90aef1	
      12	base::internal::Invoker<base::IndexSequence<0ul>, base::internal::BindState<base::internal::RunnableAdapter<void (QtWebEngineCore::URLRequestContextGetterQt:: *)()>, void (QtWebEngineCore::URLRequestContextGetterQt *), base::internal::TypeList<QtWebEngineCore::URLRequestContextGetterQt *>>, base::internal::TypeList<base::internal::UnwrapTraits<QtWebEngineCore::URLRequestContextGetterQt *>>, base::internal::InvokeHelper<false, void, base::internal::RunnableAdapter<void (QtWebEngineCore::URLRequestContextGetterQt:: *)()>, base::internal::TypeList<QtWebEngineCore::URLRequestContextGetterQt * const&>>, void ()>::Run(base::internal::BindStateBase *)	bind_internal.h	346	0x7fffee90a6a6	
      13	base::Callback<void ()>::Run() const	callback.h	396	0x7fffee970a6a	
      14	base::debug::TaskAnnotator::RunTask	task_annotator.cc	62	0x7ffff399849e	
      15	base::MessageLoop::RunTask	message_loop.cc	473	0x7ffff39d9fb6	
      16	base::MessageLoop::DeferOrRunPendingTask	message_loop.cc	482	0x7ffff39da0c0	
      17	base::MessageLoop::DoWork	message_loop.cc	594	0x7ffff39da5bd	
      18	base::MessagePumpLibevent::Run	message_pump_libevent.cc	233	0x7ffff3979674	
      19	base::MessageLoop::RunHandler	message_loop.cc	438	0x7ffff39d9d47	
      20	base::RunLoop::Run	run_loop.cc	55	0x7ffff3a13730	
      21	base::MessageLoop::Run	message_loop.cc	287	0x7ffff39d8a5b	
      22	base::Thread::Run	thread.cc	198	0x7ffff3a5e0ba	
      23	content::BrowserThreadImpl::IOThreadRun	browser_thread_impl.cc	211	0x7ffff1732c0d	
      24	content::BrowserThreadImpl::Run	browser_thread_impl.cc	246	0x7ffff1732df8	
      25	base::Thread::ThreadMain	thread.cc	248	0x7ffff3a5e419	
      26	base::(anonymous namespace)::ThreadFunc	platform_thread_posix.cc	76	0x7ffff3a520bd	
      27	start_thread	pthread_create.c	333	0x7fffebbed284	
      28	clone	clone.S	109	0x7fffeadfc74d	
      

      I'd happily provide any information you need.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jbornema Joerg Bornemann
            apollo13 Florian Apolloner
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: