Fix an assertion in QWebEngineCookieStore

Don't process pending cookies after resetting the CookieMonster
to 0 in the CookieMonsterDelegateQt. We are destroying the old
cookie store, so we can reject the pending cookies here.

Task-number: QTBUG-50160
Change-Id: I0b2ca7ee0f5e3fdcf99680bb9c0a2772a10ff3f4
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@theqtcompany.com>